--- a/app/views/map.xml
+++ b/app/views/map.xml
@@ -1,6 +1,9 @@
 <Alloy>
-  <Window id="map" class="container">
-  	<View id="menubar"/>
-  	<!-- <Button id="refreshBtn" title="U" class="font_icon bg_dk_pink"/> -->
+  <Window id="map" class="absolute">
+  	<View class="container" id="content">
+  		<View id="outerMapContainer" height="75%" contentHeight="auto" width="100%">
+  			<View id="mapContainer" class="fill_height absolute" contentHeight="auto" width="100%" />
+  		</View>
+		</View>
   </Window>
 </Alloy> 
