--- a/app/views/mapview.xml
+++ b/app/views/mapview.xml
@@ -4,8 +4,8 @@
   		<View id="outerMapContainer" class="" height="77%" contentHeight="auto" width="100%">
   			<View id="mapContainer" class="fill_height absolute" contentHeight="auto" width="100%" />
   		</View>
-  		<View id="placeListContainer" class="fill_height bg_lt_blue" contentHeight="auto">
-  			<Label id="placeListTitle" width="100%" height="36" text="nearby places" class="bg_dk_gray text_medium_medium white" /> 
+  		<View id="placeListContainer" class="fill_height" contentHeight="auto">
+  			<Label id="placeListTitle" width="100%" height="36" text="nearby places" class="bg_dk_gray opacity_high text_medium_medium white" /> 
   			<TableView id="placeListTable" separatorStyle="Titanium.UI.iPhone.TableViewSeparatorStyle.NONE"
   			 contentHeight="auto" width="100%" class="fill_height" />
   		</View>
