--- a/app/views/register.xml
+++ b/app/views/register.xml
@@ -18,10 +18,10 @@
 <Alloy>
 	<Window id="register" class="absolute">
 		
-		<View id="content" class="container border_blu">
+		<View id="content" class="container">
 		
-		<ScrollView id="registerScrollView" class="fill_width bg_lt_blue">
-				<Label class="form_label top_60">email</Label>
+		  <ScrollView id="registerScrollView" class="fill_width bg_lt_blue">
+				<Label class="form_label top_100">email</Label>
 				<TextField id="email"></TextField>
 			
 				<Label class="form_label top_20">password</Label>
@@ -29,8 +29,8 @@
 				<TextField id="password2" class="top_10"></TextField>
 				
 				<Button id="continueBtn" class="btn_large top_20 bg_dk_gray" onClick="checkUserDetails">continue</Button>
-				
 		 	</ScrollView> 
+		 	
 	 	</View>
 	</Window>
 </Alloy>
