--- a/app/views/placeoverview.xml
+++ b/app/views/placeoverview.xml
@@ -2,13 +2,13 @@
 	<Window id="placeoverview" class="absolute">	
 		<View id="content" class="container">
 		
-			<View id="miniHeaderContainer" height="60" class="" backgroundColor="#777477" zIndex="97" opacity="0" >	
+			<View id="miniHeaderContainer" width="100%" height="60" top="0" class="layout_vert" backgroundColor="#777477" zIndex="97" opacity="0" >	
 				<Label id="mini_place_name_label" text="" class="feed_label_left_lg white text_large_light"/>
 				<Label id="mini_place_second_label" text="" class="feed_label_left white text_medium_bold" />
-				<!-- <Label id="mini_place_dist_label" 		text="" class="feed_label_left white text_medium_bold" />	 -->
+				<Label id="mini_place_dist_label" text="" class="feed_label_left white text_medium_bold" />
 			</View>
 			
-			<ScrollView id="scrollView" class="fill_height" top="-60" opacity="1">
+			<ScrollView id="scrollView" class="fill_height" top="-92" opacity="1">
 			
 				<View id="headerContainer" class="layout_vert">
 					<View id="headerTop" class="layout_horz">
@@ -24,8 +24,23 @@
 						<Label id="place_dist_label" 		text="" class="white feed_label_left text_small_light" />			
 					</View>
 				</View>
-				
-				// 								LATEST UPDATE
+
+
+        // 								WHO'S HERE
+				// +============= feed_item =================================+
+				// |  +-    --+ +-------------   ---+ +-------------- ---+  |
+				// |  |       | |   midColTopLabel  | |   rightLabelTop  |  |
+				// |  |       | |   midColMidLabel  | |                  |  |
+				// |  |       | |   midColBotLabel  | |   rightLabelTop  |  |		
+				// |  +-------+ +-------------------+ +------------------+  |		
+				// +========================================================+				
+				<View id="activityContainer" class="feed_item_lg border_red">
+  			  <Label id="activityListTitle" height="36" text="WHO'S HERE" class="bg_dk_gray text_medium_medium white" /> 
+  			  <View id="activityListTableContainer" height="0" class="border"/>
+  		  </View>
+ 		  
+  		  
+		  	// 								LATEST ESTIMATE
 				// +============= feed_item =================================+
 				// |  +-photo-+ +-- middleColumn ---+ +-- rightColumn ---+  |
 				// |  |       | |   midColTopLabel  | |   rightLabelTop  |  |
