--- a/app/views/mapview.xml
+++ b/app/views/mapview.xml
@@ -1,14 +1,14 @@
 <Alloy>
-  <Window id="map" class="absolute">
+  <Window id="mapview" class="absolute">
   
-  	<View     id="content" class="container">
+  	<View     id="content" class="window_container">
   	
   		<View   id="outerMapContainer" class="absolute" height="100%" contentHeight="auto" width="100%">
   			<View id="mapContainer" class="fill_height absolute" top="-32" contentHeight="auto" width="100%" />
   		</View>
   		
   		<View        id="placeListContainer" class="fill_height" contentHeight="auto">
-  			<Label     id="placeListTitle" width="100%" height="36" text="NEARBY PLACES" class="bg_dk_gray opacity_high text_medium_medium white" /> 
+  			<Label     id="placeListTitle" width="100%" height="36" text="NEARBY PLACES" class="bg_dk_gray text_medium_medium white" /> 
   			<TableView id="placeListTable" separatorStyle="Titanium.UI.iPhone.TableViewSeparatorStyle.NONE"
   			 contentHeight="auto" width="100%" class="fill_height" />
   		</View>
