--- a/app/views/placeoverview.xml
+++ b/app/views/placeoverview.xml
@@ -9,7 +9,17 @@
 			</View>
 			
 			<ScrollView id="scrollView" class="fill_height" top="-92" opacity="1">
-			
+				//------------------------------------------------------------------------------------------------------
+				//		This scrollView contains the following top level elements, all dynamically filled in by controller
+				//		(0)		headerContainer / miniHeaderContainer
+				//		(1)		activityContainer
+				//					|
+				//					+-- checkinContainer
+				//					|
+				//					+-- estimateContainer
+				//		(2)		marksContainer
+				//		(3)		poiDetailContainer
+				//------------------------------------------------------------------------------------------------------
 				<View id="headerContainer" class="layout_vert">
 					<View id="headerTop" class="layout_horz">
 						<View class="width_50"/>
@@ -40,30 +50,32 @@
 				// |  +------------------------------+ |		
 				// +===================================+				
 				<View id="activityContainer" class="container">
-  			  <Label id="activityTitle" text="WHO'S HERE" class="section_header bg_dk_gray text_medium_medium white" /> 
-  			  <View id="activityList" contentHeight="auto" width="100%" class="thumbnail_sm_container layout_horz border bg_lt_blue"/>
+  			  <Label id="activityTitle" text="WHO'S HERE" class="section_header bg_dk_gray text_medium_medium white" />
+  			  <View id="activityList" contentHeight="auto" width="100%" class="thumbnail_sm_container layout_horz border bg_lt_blue"/> 
   		  </View>
- 		  
-  		  
-		  	// 								LATEST ESTIMATE
-				// +============= feed_item =================================+
-				// |  +-photo-+ +-- middleColumn ---+ +-- rightColumn ---+  |
-				// |  |       | |   midColTopLabel  | |   rightLabelTop  |  |
-				// |  |       | |   midColMidLabel  | |                  |  |
-				// |  |       | |   midColBotLabel  | |   rightLabelTop  |  |		
-				// |  +-------+ +-------------------+ +------------------+  |		
-				// +========================================================+
-				<View id="last_update_container" class="feed_item_lg">
-					<ImageView id="last_update_thumb" class="thumbnail"/>
-					<View id="last_update_middle" class="middle_view">
-						<Label class="feed_label_left text_medium_light" id="latest_update_static">latest update</Label>
+ 		   		  
+  		  <View id="estimates">
+			  	// 								LATEST ESTIMATE
+					// +============= feed_item =================================+
+					// |  +-photo-+ +-- middleColumn ---+ +-- rightColumn ---+  |
+					// |  |       | |   midColTopLabel  | |   rightLabelTop  |  |
+					// |  |       | |   midColMidLabel  | |                  |  |
+					// |  |       | |   midColBotLabel  | |   rightLabelTop  |  |		
+					// |  +-------+ +-------------------+ +------------------+  |		
+					// +========================================================+
+					<View id="last_update_container" class="feed_item_lg">
+						<ImageView id="last_update_thumb" class="thumbnail"/>
+						<View id="last_update_middle" class="middle_view">
+							<Label class="feed_label_left text_medium_light" id="latest_update_static">latest update</Label>
+								<!-- add most recent update labels here programmatically -->
+						</View>
+						<View class="right_view" id="last_update_right">
 							<!-- add most recent update labels here programmatically -->
-					</View>
-					<View class="right_view" id="last_update_right">
-						<!-- add most recent update labels here programmatically -->
-					</View>
+						</View>
+					</View>		
 				</View>
-					
+				
+				
 				// +============== feedContainer ===============================+
 				// |  +----------- feed_item (#1) ---------------------------+  |
 				// |  | +-photo-+ +------------------+  +------------------+ |  |                
