--- a/app/views/settings.xml
+++ b/app/views/settings.xml
@@ -1,14 +1,13 @@
 <Alloy>
-	<Window id="settings" class="absolute">
-		<View id="content" class="window_container">
+	<Window id="settings" class="abosolute">
+		<View id="content" class="window_container bg_white">
 			<ScrollView id="settings_scrollview" class="fit_height fill_width bg_white">
 				
-				<View class="absolute border_red" top=0 height="30%">
-				  <Label id="dog_name" top=10 height="80" width="100%" backgroundColor="#ccc" text="Dog Name"/>
-				  <Label id="dog_photo" top=0 height="240" width="100%" class="border" text="[X]"
-				  backgroundImage=''/>
+				<View class="container border_red" top=0 height="30%">
+				  <Label id="dog_name" top="0" height="120" width="100%" backgroundColor="#fff" class="border_blu"  text="Dog Name"/>
+				  <Label id="dog_photo" top="0" height="240" width="100%" class="border" text="[X]" />
 				</View>
-				<View class="container border_red"> 
+				<View class="container border_blu"> 
 				  <Label id="user_email" height="40" width="100%" class="border" text="User email"/>
 				</View>
 				
