--- a/app/views/mapview.xml
+++ b/app/views/mapview.xml
@@ -1,14 +1,19 @@
 <Alloy>
   <Window id="mapview" class="absolute">
   
-  	<View     id="content" class="window_container">
+  	<View id="content" class="window_container">
   	
-  		<View   id="outerMapContainer" class="absolute" height="100%" contentHeight="auto" width="100%">
+  		<View id="outerMapContainer" class="absolute" height="100%" contentHeight="auto" width="100%">
+  			<View id="mapHUD" backgroundColor='#333333' width="90%" top=4 zIndex=25 opacity=0.85 contentHeight='auto'  borderRadius=3>
+  				<Label id="geo_trigger" color='#ffffff'  text="Geo Trigger" class="text_small_light"/>
+  				<Label id="geo_success" color='#ffffff'  text="Geo rec'd" class="text_small_light"/>
+  				<Label id="geo_latlng" color='#ffffff'  text="lat/lng" class="text_small_light"/>
+  				<Label id="current_place_ID" color='#ffffff'  text="Current Place ID" class="text_small_light"/>
+  			</View>
   			<View id="mapContainer" class="fill_height absolute" top="-32" contentHeight="auto" width="100%" />
   		</View>
-  		
-  		<View        id="placeListContainer" class="fill_height" contentHeight="auto">
-  			<Label     id="placeListTitle" width="100%" height="36" text="NEARBY PLACES" class="bg_dk_gray text_medium_medium white" /> 
+  		<View id="placeListContainer" class="fill_height" contentHeight="auto">
+  			<Label id="placeListTitle" width="100%" height="36" text="NEARBY PLACES" class="bg_dk_gray text_medium_medium white" /> 
   			<TableView id="placeListTable" separatorStyle="Titanium.UI.iPhone.TableViewSeparatorStyle.NONE"
   			 contentHeight="auto" width="100%" class="fill_height" />
   		</View>
