--- a/app/views/placeoverview.xml
+++ b/app/views/placeoverview.xml
@@ -48,13 +48,13 @@
 				// |  |    thumbnails total          | |
 				// |  +------------------------------+ |		
 				// +===================================+				
-				<View id="activityContainer" class="container">
+				<!-- <View id="container_whos_here" class="container">
   			  <Label id="activityTitle" text="WHO'S HERE" class="section_header bg_dk_gray text_medium_medium white" />
-  			  <View id="activityList" contentHeight="auto" width="100%" class="thumbnail_sm_container layout_horz bg_lt_blue"/> 
-  		  </View>
+  			  <View id="activityList" contentHeight="auto" width="100%" class="thumbnail_sm_container layout_horz bg_lt_blue"/ > 
+  		  </View> -->
  		   		  
   		 
-  		  <View id="latest_estimate_container" class="feed_item_lg border">
+  		  <View id="container_last_estimate" class="feed_item_lg border">
 					<!-- 
 					<View id="last_update_container" class="feed_item_lg">
 						<ImageView id="last_update_thumb" class="thumbnail"/>
@@ -68,9 +68,7 @@
 						</View>	
 					-->
 				</View>
-				
-				
-				
+							
 								
 			</ScrollView>
 		</View>
