--- a/app/views/provideestimate.xml
+++ b/app/views/provideestimate.xml
@@ -1,9 +1,7 @@
 <Alloy>
-	
-	<Window id="parkestimate" class="absolute">
-	
+	<Window id="provideestimate" class="absolute">	
 		<View id="content" class="window_container">
-		
+			
 			<ScrollView class="fill_height">
 				<!-- Create s liders and readouts -->
 				<Label id="place_checkin" class="bg_white text_large_bold"></Label>	
