--- a/app/views/provideestimate.xml
+++ b/app/views/provideestimate.xml
@@ -2,18 +2,19 @@
 	<Window id="provideestimate" class="absolute">	
 		<View id="content" class="window_container">
 			
-			<ScrollView id="estimate_scrollView" top="0" class="layout_vert fill_height">
-				<!-- Create s liders and readouts -->
-				<Label id="place_checkin" class="bg_white text_large_bold"></Label>	
-				<Label id="question" class="form_label">How many dogs are playing here?</Label>	
-				<Slider id="slider" onChange="updateLabel"/>				
-				<Label id="slider_int_val" class="checkin_label text_large_bold"/>
-				<Label id="slider_label" class="checkin_label text_large_medium"/>
+			<!-- <ScrollView id="scrollView" top="0" class="layout_vert"> -->
+				
+				<!-- Create sliders and readouts --> 
+				<!-- <Label id="" class="text_large_bold" height="auto">PARK NAME</Label> -->	
+				<!-- <Label id="question" class="bg_white">How many dogs are playing here?</Label> -->
+				<!-- <Slider id="slider" onChange="updateLabel"/> -->				
+				<!-- <Label id="slider_int_val" class="checkin_label text_large_bold"/>  -->
+				<!-- <Label id="slider_label" class="checkin_label text_large_medium"/>  -->
 		
 				<!-- TODO:  add second slider *IF* park has two play areas; 
 				both sliders should be dynamically added -->
-				<Button id="checkInBtn"/>
-		 	</ScrollView>
+				<!-- <Button id="saveEstimateBtn"/> -->
+		 <!-- </ScrollView>  -->
 
 		</View>
 		
