--- a/app/views/placeoverview.xml
+++ b/app/views/placeoverview.xml
@@ -3,9 +3,8 @@
 		<View id="content" class="window_container">
 		
 			<View id="miniHeaderContainer" width="100%" height="60" top="0" class="layout_vert" backgroundColor="#777477" zIndex="97" opacity="0" >	
-				<Label id="mini_place_name_label" text="" class="feed_label_left_lg white text_large_light"/>
-				<Label id="mini_place_second_label" text="" class="feed_label_left white text_medium_bold" />
-				<Label id="mini_place_dist_label" text="" class="feed_label_left white text_medium_bold" />
+				<Label id="mini_place_name_label" text="" class="feed_label_left_lg white text_medium_bold"/>
+				<Label id="mini_place_second_label" text="" class="feed_label_left white text_medium_medium" />
 			</View>
 			
 			<ScrollView id="scrollView" class="fill_height" top="-92" opacity="1">
@@ -33,7 +32,7 @@
 					</View>
 				</View>
 				
-				<View id="basic_info" class="layout_vert"/>
+				<View id="basics" class="layout_vert"/>
         <View id="activity" class="layout_vert"/>
         <View id="marks" class="layout_vert"/>
         <View id="features" class="layout_vert"/>						
