--- a/app/views/provideestimate.xml
+++ b/app/views/provideestimate.xml
@@ -2,20 +2,17 @@
 	<Window id="provideestimate" class="absolute">	
 		<View id="content" class="window_container">
 			
-			<!-- <ScrollView id="scrollView" top="0" class="layout_vert"> -->
-				
-				<!-- Create sliders and readouts --> 
-				<!-- <Label id="" class="text_large_bold" height="auto">PARK NAME</Label> -->	
-				<!-- <Label id="question" class="bg_white">How many dogs are playing here?</Label> -->
-				<!-- <Slider id="slider" onChange="updateLabel"/> -->				
-				<!-- <Label id="slider_int_val" class="checkin_label text_large_bold"/>  -->
-				<!-- <Label id="slider_label" class="checkin_label text_large_medium"/>  -->
-		
-				<!-- TODO:  add second slider *IF* park has two play areas; 
-				both sliders should be dynamically added -->
-				<!-- <Button id="saveEstimateBtn"/> -->
-		 <!-- </ScrollView>  -->
+			<ScrollView id="estimates" top="0" width="100%" class="fill_height">
 
+				<View id="miniHeaderContainer" width="100%" height="60" top="0" class="layout_vert" backgroundColor="#CCCCCC" zIndex="97" opacity="1" >	
+					<Label id="mini_place_name_label" text="" class="feed_label_left_lg white text_medium_bold"/>
+					<Label id="mini_place_second_label" text="" class="feed_label_left white text_medium_medium" />
+				</View>
+				
+				<View id="sliders" width="100%" contentHeight="auto"/>
+				
+			</ScrollView>
+				
 		</View>
  	</Window>
 </Alloy>
