--- a/app/views/placeoverview.xml
+++ b/app/views/placeoverview.xml
@@ -2,8 +2,8 @@
 	<Window id="placeoverview" class="absolute">	
 		<View id="content" class="window_container">
 		
-			<View id="miniHeaderContainer" width="100%" height="60" top="0" class="layout_vert" backgroundColor="#777477" zIndex="97" opacity="0" >	
-				<Label id="mini_place_name_label" text="" class="feed_label_left_lg white text_medium_bold"/>
+			<View id="miniHeaderContainer" width="100%" height="55" top="-2" class="layout_vert" backgroundColor="#777477" zIndex="97" opacity="0" >	
+				<Label id="mini_place_name_label" text="" class="feed_label_left_lg white text_large_bold"/>
 				<Label id="mini_place_second_label" text="" class="feed_label_left white text_medium_medium" />
 			</View>
 			
@@ -25,10 +25,10 @@
 						<View class="fill_width"/>
 					</View>
 					<View id="headerBottom" class="layout_vert">
-						<Label id="place_name_label" 		text="" class="white feed_label_left_lg text_large_light"/>
-						<Label id="place_address_label" text="" class="white feed_label_left text_small_light" />
-						<Label id="place_city_label" 		text="" class="white feed_label_left text_small_light" />
-						<Label id="place_dist_label" 		text="" class="white feed_label_left text_small_light" />			
+						<Label id="place_name_label" 		text="" class="white feed_label_left_lg text_large_bold"/>
+						<Label id="place_address_label" text="" class="white feed_label_left text_medium_medium" />
+						<Label id="place_city_label" 		text="" class="white feed_label_left text_medium_medium" />
+						<Label id="place_dist_label" 		text="" class="white feed_label_left text_medium_medium" />			
 					</View>
 				</View>
 				
