--- a/app/views/markoverview.xml
+++ b/app/views/markoverview.xml
@@ -2,8 +2,7 @@
 	<Window id="markoverview" class="absolute">	
 		<View class="window_container">
 			
-			<ScrollView id="scrollView" class="fill_height" top="0" opacity="1">
-			</ScrollView>
+			<ScrollView id="scrollView" class="fill_height" top="0" opacity="1" />
 		
 		</View>
 	</Window>
