--- a/app/views/provideestimate.xml
+++ b/app/views/provideestimate.xml
@@ -5,7 +5,7 @@
 			<ScrollView id="estimates" top="0" width="100%" class="fill_height">
 
 				<View id="miniHeaderContainer" width="100%" height="60" top="0" class="layout_vert" backgroundColor="#CCCCCC" zIndex="97" opacity="1" >	
-					<Label id="mini_place_name_label" text="" class="feed_label_left_lg white text_medium_bold"/>
+					<Label id="mini_place_name_label" text="" class="feed_label_left_lg white text_large"/>
 					<Label id="mini_place_second_label" text="" class="feed_label_left white text_medium_medium" />
 				</View>
 				
