--- a/app/views/createmark.xml
+++ b/app/views/createmark.xml
@@ -3,11 +3,12 @@
 		<View id="content" class="window_container">
 		
 			<ScrollView id="scrollView" class="fill_height" top="0" opacity="1">
-				<View id="miniHeaderContainer" width="100%" height="60" top="0" class="layout_vert" backgroundColor="#CCCCCC" zIndex="97" opacity="1">	
+				<!-- <View id="miniHeaderContainer" width="100%" height="60" top="0" class="layout_vert" backgroundColor="#CCCCCC" zIndex="97" opacity="1">	
 					<Label id="mini_place_name_label" text="[ Map Header Goes Here ]" class="feed_label_left_lg white text_medium_bold"/>
 					<Label id="mini_place_second_label" text="..." class="feed_label_left white text_medium_medium" />
-				</View>
-				
+				</View> -->
+				<View id="mapContainer" class="absolute" top="0" height="40%" width="100%" />
+				<View id="markForm" width="100%"/>
 			</ScrollView>
 		</View>
 	</Window>
