huge overhaul of mapview; new map class

--- a/app/views/mapview.xml
+++ b/app/views/mapview.xml
@@ -1,14 +1,13 @@
 <Alloy>
   <Window id="mapview" class="absolute">
-  
   	<View id="content" class="window_container">
   	
   		<View id="outerMapContainer" class="absolute" height="100%" contentHeight="auto" width="100%">
-  			<View id="mapHUD" backgroundColor='#333333' width="40%" top=4 zIndex=25 opacity=0.00 contentHeight='auto'  borderRadius=3>
+  			<View id="mapHUD" backgroundColor='#333333' width="50%" top="4" zIndex="25" opacity="0.75" contentHeight="auto">
   				<Label id="geo_trigger" color='#ffffff'  text="Geo Trigger" class="text_small_light"/>
   				<Label id="geo_success" color='#ffffff'  text="Geo rec'd" class="text_small_light"/>
   				<Label id="geo_latlng" color='#ffffff'  text="lat/lng" class="text_small_light"/>
-  				<Label id="current_place_ID" color='#ffffff'  text="curr placeID" class="text_small_light"/>
+  				<Label id="mem_usage" color='#ffffff'  text="memory" class="text_small_light"/>
   			</View>
   			<View id="mapContainer" class="fill_height absolute" top="0" contentHeight="auto" width="100%" />
   		</View>
@@ -18,6 +17,5 @@
   		</View>
 		
 		</View>
-		
   </Window>
 </Alloy> 
