--- a/app/views/profile.xml
+++ b/app/views/profile.xml
@@ -3,7 +3,7 @@
 		<View id="content" class="window_container bg_white">
 			<ScrollView id="settings_scrollview" class="fit_height fill_width bg_white">
 				
-				<View class="container border_red" top=0 height="30%">
+				<View class="container border_red" top="0" height="30%">
 				  <Label id="dog_name" top="0" height="120" width="100%" backgroundColor="#fff" class="border_blu"  text="Dog Name"/>
 				  <Label id="dog_photo" top="0" height="240" width="100%" class="border" text="[X]" />
 				</View>
