--- a/app/views/profile.xml
+++ b/app/views/profile.xml
@@ -1,17 +1,7 @@
 <Alloy>
 	<Window id="profile" class="abosolute">
 		<View id="content" class="window_container bg_white">
-			<ScrollView id="settings_scrollview" class="fit_height fill_width bg_white">
-				
-				<View class="container border_red" top="0" height="30%">
-				  <Label id="dog_name" top="0" height="120" width="100%" backgroundColor="#fff" class="border_blu"  text="Dog Name"/>
-				  <Label id="dog_photo" top="0" height="240" width="100%" class="border" text="[X]" />
-				</View>
-				<View class="container border_blu"> 
-				  <Label id="user_email" height="40" width="100%" class="border" text="User email"/>
-				</View>
-				
-			</ScrollView>
+			<ScrollView id="scrollview" class="fit_height fill_width bg_white" />
 		</View>
 	</Window>
 </Alloy>
